Fixing build